# shape-and-contour-analyzer_Task02

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
Backend/: Canny.cpp  Contour.cpp  Hough.cpp  Main_bindings.cpp  Snake.cpp  Snake.hpp
Frontend/: Main_window.py  styles.py  tab_canny.py  tab_contour.py
Helpers/: image_utils.hpp  image_utils.py
